--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div class="all">
-        <button>Click me!</button>
+    <button>Click me!</button>
       
-        <script src="bkgr.js"></script>
+    <script src="bkgr.js"></script>
 
 
 
@@ -10,21 +10,21 @@
     <div class="tableofcontents">
         <h3>Table of Contents</h3>
         <ul>
-            <li><a href="educationsection">Education</a></li>
-            <li><a href="csclasssection">Computer Science Courses</a></li>
-            <li><a href="jobsection">Job Experience</a></li>
+            <li><a href="#educationsection">Education</a></li>
+            <li><a href="#csclasssection">Computer Science Courses</a></li>
+            <li><a href="#jobsection">Job Experience</a></li>
         </ul>
     </div>  
     
 
 
-    <h2><a name="educationsection">Education</href></h2>
+    <h2><a id="educationsection">Education</href></h2>
     <p><b>Inglemoor High School:</b> Graduated as valedictorian with the IB Diploma</p>
     <p><b>University of Washington, Seattle:</b> Currently a Sophomore in the Computer Science major</p>
 
 
 
-    <h2><a name="csclasssection">Computer Science Courses</href></h2> <!--put spaces BEFORE headings-->
+    <h2><a id="csclasssection">Computer Science Courses</href></h2> <!--put spaces BEFORE headings-->
     <p>
         <ul>
             <li>International Baccalaureate SL Computer Science</li> <!--add paragraph abt details below each bulletpoint-->
@@ -44,7 +44,7 @@
 
 
 
-    <h2><a name="jobsection">Job Experience</href></h2>
+    <h2><a id="jobsection">Job Experience</href></h2>
 
 
 <!--extracurricular = harvard + imgs one on edx; that one uni ?? gamer thing??-->
