--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <div class="all">
     <button>Click me!</button>
-      
     <script src="bkgr.js"></script>
 
 
@@ -18,13 +17,13 @@
     
 
 
-    <h2><a id="educationsection">Education</href></h2>
+    <h2 id="educationsection">Education</h2>
     <p><b>Inglemoor High School:</b> Graduated as valedictorian with the IB Diploma</p>
     <p><b>University of Washington, Seattle:</b> Currently a Sophomore in the Computer Science major</p>
 
 
 
-    <h2><a id="csclasssection">Computer Science Courses</href></h2> <!--put spaces BEFORE headings-->
+    <h2 id="csclasssection">Computer Science Courses</h2> <!--put spaces BEFORE headings-->
     <p>
         <ul>
             <li>International Baccalaureate SL Computer Science</li> <!--add paragraph abt details below each bulletpoint-->
@@ -44,7 +43,7 @@
 
 
 
-    <h2><a id="jobsection">Job Experience</href></h2>
+    <h2><a id="jobsection">Job Experience</a></h2>
 
 
 <!--extracurricular = harvard + imgs one on edx; that one uni ?? gamer thing??-->
