--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div class="all">
     <button>Click me!</button>
-    <script src="bkgr.js"></script>
+    <script src="bkgr.js">  <!--<img src="images/bubbysleep.png"></img>-->  </script>
 
 
 
