--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div class="all">
-    <button type="button" onclick="onButtonClick()" src="bkgr.js">Click me!</button>
-    <!--<script src="bkgr.js">  <!--<img src="images/bubbysleep.png"></img>->  </script>-->
+    <button type="button" onclick="onButtonClick()">Click me!</button>
+    <script src="bkgr.js">  <!--<img src="images/bubbysleep.png"></img>-->  </script>
 
 
 
