--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   </head>
 
 <body>
+    <!-- Favicons -->
+    <link
+      rel="cherryblossoms"
+      sizes="180x180"
+      href="./cherry_blossoms.jpg"
+    />
+    <!--<link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/icons/favicon-32x32.png"
+    />-->
+
+
     <div id="main">
         <p></p>
         <p>bottom text</p>
@@ -20,7 +34,9 @@
         <div class="tableofcontents">
             <h3>Table of Contents</h3>
             <ul>
-                <li><a href="#educationsection">Education</a></li>
+                <li><p style="font-size: 20px; color:#000000;">
+                    <a href="./education.html">Education</a>
+                    </p></li>
                 <li><a href="#csclasssection">Computer Science Courses</a></li>
                 <li><a href="#jobsection">Job Experience</a></li>
             </ul>
