--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
       href="assets/icons/favicon-32x32.png"
     />-->
 
+    <div class="nextto">
+        img
+    </div>
+    <div class="nextto">
+        <h1>Gabriela Pletosu</h1>
+        <p>
+            My name is Gabriela Pletosu
+        </p>
+    </div>
 
     <div id="main">
         <p></p>
