--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     <div class="navbar">
         <h1>Gabriela Pletosu</h1>
         <ul>
-            <li><p style="font-size: 20px; color:#000000;">
-                <a href="./education.html">Education</a>
+            <li class="nextto"><p style="font-size: 20px; color:#000000;">
+                <div href="./cherry_blossoms.jpg" class="nextto"></div>
+                <a href="./education.html" class="nextto">Education</a>
                 </p></li>
-            <li><a href="#csclasssection">Computer Science Courses</a></li>
-            <li><a href="#jobsection">Job Experience</a></li>
+            <li class="nextto"><a href="#csclasssection">Computer Science Courses</a></li>
+            <li class="nextto"><a href="#jobsection">Job Experience</a></li>
         </ul>
     </div>
 
@@ -43,7 +44,7 @@
         <p>bottom text</p>
     </div>
     <div class="all">
-        <button type="button" onclick="onButtonClick()">Click me!</button>
+        <button type="button" onclick="onButtonClick()">Click to view res?</button>
         <script src="bkgr.js">  <!--<img src="images/bubbysleep.png"></img>-->  </script>
         
 
