--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="nextto">
         <p class="description">
-            My name is Gabriela Pletosu
+            My name is Gabriela Pletosu. I graduated as a valedictorian from Inglemoor High School in 2022 and am currently double-majoring in Computer Science and Linguistics at UW Seattle.
         </p>
     </div>
 
