--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="navbar">
         <h1>Gabriela Pletosu</h1>
         <ul>
-            <li class="nextto"><p style="font-size: 20px; color:#000000;">
+            <li class="nextto"><p>
                 <div href="./cherry_blossoms.jpg" class="nextto"></div>
                 <a href="./education.html" class="nextto">Education</a>
                 </p></li>
