--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         </ul>
     </div>
 
+    <div class="block"></div>
+
     <div class="nextto">
         img from graduation or wtv
     </div>
@@ -38,6 +40,8 @@
             My name is Gabriela Pletosu. I graduated as a valedictorian from Inglemoor High School in 2022 and am currently double-majoring in Computer Science and Linguistics at UW Seattle.
         </p>
     </div>
+
+    <p>Connect with me at my LinkedIn here! <a href="https://www.linkedin.com/in/GabrielaPletosu/">https://www.linkedin.com/in/GabrielaPletosu/</a></p>
 
     <div id="main">
         <p></p>
