--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       rel="cherryblossoms"
       sizes="180x180"
-      href="./cherry_blossoms.jpg"
+      href="./images/cherry_blossoms.jpg"
     />
     <!--<link
       rel="icon"
@@ -22,7 +22,7 @@
         <h1>Gabriela Pletosu</h1>
         <ul>
             <li class="nextto"><p>
-                <div href="./cherry_blossoms.jpg" class="nextto"></div>
+                <div href="./images/cherry_blossoms.jpg" class="nextto"></div>
                 <a href="./education.html" class="nextto">Education</a>
                 </p></li>
             <li class="nextto"><a href="#csclasssection">Computer Science Courses</a></li>
@@ -32,24 +32,25 @@
 
     <div class="block"></div>
 
-    <div class="nextto">
-        img from graduation or wtv
-    </div>
-    <div class="nextto">
-        <p class="description">
-            My name is Gabriela Pletosu. I graduated as a valedictorian from Inglemoor High School in 2022 and am currently double-majoring in Computer Science and Linguistics at UW Seattle.
-        </p>
+    <div>
+        <div class="nextto">
+            <img src="./images/graduationphoto.jpeg"></img>
+        </div>
+        <div class="nextto">
+            <p class="description">
+                My name is Gabriela Pletosu. I graduated as a valedictorian from Inglemoor High School in 2022 and am currently double-majoring in Computer Science and Linguistics at UW Seattle.
+            </p>
+        </div>
     </div>
 
     <p>Connect with me at my LinkedIn here! <a href="https://www.linkedin.com/in/GabrielaPletosu/">https://www.linkedin.com/in/GabrielaPletosu/</a></p>
 
     <div id="main">
-        <p></p>
-        <p>bottom text</p>
     </div>
     <div class="all">
-        <button type="button" onclick="onButtonClick()">Click to view res?</button>
+        <button type="button" onclick="onButtonClick()">Click to view resume as image</button>
         <script src="bkgr.js">  <!--<img src="images/bubbysleep.png"></img>-->  </script>
+        <p><a href="./PletosuResume.pdf" download="Pletosu_Resume">Or click here to download!</a></p>
         
 
         <div class="tableofcontents">
