--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="block">
         <div>
             <div class="nextto">
-                <img src="./images/graduationphoto.jpeg"></img>
+                <img class="image" src="./images/graduationphoto.jpeg"></img>
             </div>
             <div class="nextto">
                 <p class="description">
