--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="all">
             <button type="button" onclick="onButtonClick()">Click to view resume as image</button>
-            <script src="bkgr.js"> <img src="./images/bubbysleep.png"></img> </script>
+            <script src="bkgr.js"></script> <!--<img src="./images/bubbysleep.png"></img>-->
             <p><a href="./Pletosu_Resume.pdf" download>Or click here to download!</a></p>
             
     
