--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="block">
-        <div>
+        <div class="nextto">
             <div class="nextto">
                 <img class="image" src="./images/graduationphoto.jpeg"></img>
             </div>
