--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
         <p>Connect with me at my LinkedIn here! <a href="https://www.linkedin.com/in/GabrielaPletosu/">https://www.linkedin.com/in/GabrielaPletosu/</a></p>
     
-        <div id="main">
+        <div id="block">
         </div>
         <div class="all">
             <button type="button" onclick="onButtonClick()">Click to view resume as image</button>
