using js in html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div id="root"></div>
-  <p>here goes index</p>
+  <p>here goes index js</p>
   <script src="./index.js"></script>
 </body>
 
