--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-  <div id="gabi"></div>
+  <!-- <div id="gabi"></div> -->
+  <gabi></gabi>
   <p>here goes index gabi</p>
   <script src="./index.tsx"></script>
 </body>
