adding index pag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <!-- <div id="gabi"></div> -->
   <gabi></gabi>
-  <p>here goes index gabi</p>
+  <p>here goes index gabi2</p>
   <script src="./index.tsx"></script>
 </body>
 
