adding new root

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 </head>
 
 <body>
-  <!-- <div id="gabi"></div> -->
-  <gabi></gabi>
-  <p>here goes index gabi2</p>
+  <div id="root"></div>
+  <p>here goes index root</p>
   <script src="./index.tsx"></script>
 </body>
 
