--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div id="root"></div>
-  <p>here goes index root</p>
+  <p>here goes index root_React</p>
   <script src="./index.tsx"></script>
 </body>
 
