--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="root"></div>
   <p>here goes index root_React</p>
-  <script src="./index.tsx"></script>
+  <script src="index.tsx"></script>
 </body>
 
 </html>
