--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
   <div id="root"></div>
-  <p>here goes index root_React_/</p>
-  <script src="index.tsx"></script>
+  <!-- <p>here goes index root_React_/</p> -->
+  <script type="module" src="./index.tsx"></script>
 </body>
 
 </html>
