--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     />-->
 
     <div class="navbar">
-        <h1>Gabriela Pletosu_u</h1>
-        <ul>
-            <li className="nextto"><p>
+        <h1>Gabriela Pletosu_uu</h1>
+        <ul class="nextto">
+            <li class="nextto"><p>
                 <div href="./images/cherry_blossoms.jpg" class="nextto"></div>
                 <a href="./education.html" class="nextto">Education</a>
                 </p></li>
-            <li className="nextto"><a href="#csclasssection">Computer Science Courses</a></li>
-            <li className="nextto"><a href="./jobs.html" class="nextto">Job Experience</a></li>
+            <li class="nextto"><a href="#csclasssection">Computer Science Courses</a></li>
+            <li class="nextto"><a href="./jobs.html" class="nextto">Job Experience</a></li>
         </ul>
     </div>
 
