--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />-->
 
     <div class="navbar">
-        <h1>Gabriela Pletosu_uu</h1>
+        <h1 class="nextto">Gabriela Pletosu_uuu</h1>
         <ul class="nextto">
             <li class="nextto"><p>
                 <div href="./images/cherry_blossoms.jpg" class="nextto"></div>
