--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     />-->
 
     <div class="navbar">
-        <h1 class="nextto">Gabriela Pletosu_uuu</h1>
+        <h1 class="nextto">Gabriela Pletosu</h1>
         <ul class="nextto">
-            <li class="nextto"><p>
+            <li><p>
                 <div href="./images/cherry_blossoms.jpg" class="nextto"></div>
                 <a href="./education.html" class="nextto">Education</a>
                 </p></li>
-            <li class="nextto"><a href="#csclasssection">Computer Science Courses</a></li>
-            <li class="nextto"><a href="./jobs.html" class="nextto">Job Experience</a></li>
+            <li><a href="#csclasssection">Computer Science Courses</a></li>
+            <li><a href="./jobs.html" class="nextto">Job Experience</a></li>
         </ul>
     </div>
 
