--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />-->
 
     <div class="navbar">
-        <h1 class="nextto">Gabriela Pletosu</h1>
+        <h1 class="nextto">Gabriela Pletosu_css</h1>
         <ul class="nextto">
             <li><p>
                 <div href="./images/cherry_blossoms.jpg" class="nextto"></div>
