--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     />-->
 
     <div class="navbar">
-        <h1 class="nextto">Gabriela Pletosu_css%</h1>
-        <ul class="nextto">
+        <h1 class="nextto">Gabriela Pletosu_css%3</h1>
+        <ul>
             <li><p>
                 <div href="./images/cherry_blossoms.jpg" class="nextto"></div>
                 <a href="./education.html" class="nextto">Education</a>
