--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <div class="navbar">
         <h1 class="nextto">Gabriela Pletosu_css%p</h1>
         <p class="nextto">
-                <div href="./images/cherry_blossoms.jpg" class="nextto"></div>
-                <a href="./education.html" class="nextto">Education</a>
+                <!-- <div href="./images/cherry_blossoms.jpg" class="nextto"></div> -->
+                <a href="./education.html">Education</a>
                 </p>
         <p class="nextto"><a href="#csclasssection">Computer Science Courses</a></p>
-        <p class="nextto"><a href="./jobs.html" class="nextto">Job Experience</a></p>
+        <p class="nextto"><a href="./jobs.html">Job Experience</a></p>
         <!-- <ul>
             <li class="nextto"><p>
                 <div href="./images/cherry_blossoms.jpg" class="nextto"></div>
